--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,3 @@
-@import "../../node_modules/breakpoint-sass/stylesheets/breakpoint";
 @import "variables";
 @import "global";
 
@@ -53,7 +52,7 @@
       margin: 0;
     }
     &.open {
-      @include breakpoint(max-width 768px) {
+      @media (max-width: #{$header-breakpoint - 1px}) {
         > .nav-links {
           background-color: $header-nav-background-color;
           display: block;
@@ -77,7 +76,7 @@
     display: block;
     clear: both;
   }
-  @include breakpoint($header-breakpoint) {
+  @media (min-width: $header-breakpoint) {
     padding: $header-max-top-bottom-space $header-left-right-space;
     .logo {
       max-width: none;
